--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -597,7 +597,7 @@ color: var(--text-color);
     position: fixed;
      /* background:linear-gradient(0deg, rgba(0,25,58,1) 0%, rgba(255,32,78,1) 80%); */
      background-color: var(--primary-color);
-    width: 100%;
+    width: 100vw;
     padding: 5px;
   }
 
@@ -625,9 +625,9 @@ color: var(--text-color);
     display:flex;
     flex-direction: column;
     position: fixed;
-    width: 100%;
+    width: 100vw;
     left: 0px;
-    top: 80px;
+    top: 75px;
     transition: 0.5s;
   }
   .BurgerMenuHide{
@@ -705,21 +705,19 @@ color: var(--text-color);
     display: inline;
     position: relative;
     left:10%;
+    z-index: 80;
     transform: translateX(- 10%);
   }
   .HomePageContent >  li > div > button{
-    display: inline;
-    position: relative;
-    right:-35%;
+    /* display: inline-block;
+    position:relative; */
     
+
   }
 
    .HomePageContent > li > div {
-      position: absolute;
-      border-radius: 10px;
-  
-      display: inline;
-      background-color: var(--secondary-color);
+    display: inline-block;
+    position: relative;
   }
 
 
@@ -737,10 +735,12 @@ color: var(--text-color);
   /* singlePage */
 
   .SinglePage{
-    width: 90%;
+    width: 80%;
     position: absolute;
+    left: 47%;
+    transform: translateX(-50%);
     top: 15%;
-    margin: 10px 10px;
+    margin: 10px;
     border-radius: 10px;
     color: var(--text-color);
     border:solid 2px var(--primary-color);
@@ -803,6 +803,14 @@ color: var(--text-color);
   position: absolute;
   bottom: 0px;
 } */
+
+.NotLogin {
+  margin-top:200px;
+}
+
+
+/* Login page */
+
 
 }
 
